infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-dev
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-dev
  template:
    metadata:
      labels:
        app: portfolio-dev
    spec:
      containers:
      - name: portfolio-dev
        image: registry.gitlab.com/baptiste.bronsin/portfolio:1.0.1
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: gitlab-registry
