infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
spec:
  type: ClusterIP
  selector:
    app: portfolio-dev
  ports:
  - port: 3000
    targetPort: 3000
